After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780301 - wayland: Fix harmless clang warnings
wayland: Fix harmless clang warnings
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Wayland
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-03-20 13:41 UTC by Jonas Ådahl
Modified: 2017-05-08 21:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
wayland: Use correct enum type and values (2.83 KB, patch)
2017-03-20 13:41 UTC, Jonas Ådahl
committed Details | Review
wayland: Remove self assignment (1.35 KB, patch)
2017-03-20 13:41 UTC, Jonas Ådahl
committed Details | Review

Description Jonas Ådahl 2017-03-20 13:41:31 UTC
See patches.
Comment 1 Jonas Ådahl 2017-03-20 13:41:38 UTC
Created attachment 348316 [details] [review]
wayland: Use correct enum type and values

Use the gravity enum values when converting to gravity. It doesn't fix
anything, since the enum values were identical, but it makes a coverity
warning go away.
Comment 2 Jonas Ådahl 2017-03-20 13:41:45 UTC
Created attachment 348317 [details] [review]
wayland: Remove self assignment

Don't assign the value of a variable to itself. It was added just for
clarity, but it makes coverity complain, so remove it.
Comment 3 Matthias Clasen 2017-03-23 22:51:13 UTC
Review of attachment 348316 [details] [review]:

sure
Comment 4 Matthias Clasen 2017-03-23 22:56:33 UTC
Review of attachment 348317 [details] [review]:

sure
Comment 5 Matthias Clasen 2017-05-08 21:51:02 UTC
Attachment 348316 [details] pushed as 9f9aaea - wayland: Use correct enum type and values
Attachment 348317 [details] pushed as 5c74afb - wayland: Remove self assignment